--- a/posts/2013-03-06-how-to-set-up-ntuvpn-on-ubuntu.mkd
+++ b/posts/2013-03-06-how-to-set-up-ntuvpn-on-ubuntu.mkd
@@ -5,7 +5,7 @@ date: 2013-03-06
 ---
 _For Ubuntu users, the NTU's [official instruction](http://www.ntu.edu.sg/cits/itnetworking/remoteaccess/Pages/quickstartguide.aspx#sslvpn) to setup a [VPN](http://en.wikipedia.org/wiki/Vpn "Virtual private network") client requires them to install a java plugin in order to connect to its server. However, the client can only run on a 32-bit JVM, and even if it is running on one, the client seems to hang. Therefore, to save you from all these hassles, this post will help you set up a VPN client that runs natively on Ubuntu._
 
-## Installing the required package ##
+# Installing the required package
 
 Firstly, you need to install the [PPTP](http://en.wikipedia.org/wiki/Pptp) plugin for Network Manager, which provides a PPTP VPN plugin to connect to a Microsoft VPN server.
 
@@ -17,7 +17,7 @@ sudo apt-get install network-manager-pptp
 
 Enter your password if required and wait until it finishes installing.
 
-## Setting up a VPN connection ##
+# Setting up a VPN connection
 
 Click on the Network Manager icon, select `VPN Connections` and choose `Configure VPN...`
 
@@ -34,10 +34,10 @@ Click on `Advanced...`, tick `Use Point-to-Point encryption (MPPE)`, and click `
 
 Finally, click `Save...`
 
-## Connect to NTUVPN ##
+# Connect to NTUVPN
 
 Click on the Network Manager icon, select `VPN Connections` and choose the newly created `NTUVPN`. The connection should be established now.
 
-## Disconnect from NTUVPN ##
+# Disconnect from NTUVPN
 
 To disconnect from NTUVPN, click on the Network Manager icon, select `VPN Connections` and choose `Disconnect VPN`
