--- a/notes/courses/real-analysis/12-series.mkd
+++ b/notes/courses/real-analysis/12-series.mkd
@@ -38,3 +38,21 @@ __Theorem (geometric series).__ If $|x| < 1$ then $\sum\limits_{n = 0}^\infty x^
 _Proof._ Consider $|x| < 1$. Let $s_n = 1 + x + \dots + x^n$. Then $s_n = \frac{1 - x^{n + 1}}{1 - x}$. So, $\lim\limits_{n \rightarrow \infty} s_n = \frac{1}{1 - x} \cdot \lim\limits_{n \rightarrow \infty} (1 - x^{n + 1}) = \frac{1}{1 - x}$.
 
 Consider $|x| \geq 1$. Terms don't go to $0$ so the $\sum x_n$ diverges. QED.
+
+__Theorem (due to Cauchy).__ If $a_1 \geq a_2 \geq \dots \geq 0$ (monotonically decreasing) then $\sum a_n$ converges if and only if $\sum 2^ka_{2^k}$ converges.
+
+_Proof idea._ Let $s_n = a_1 + a_2 + \dots + a_n$ and $t_n = a_1 + 2a_2 + \dots + 2^na_{2^n}$. So, $s_n = (a_1) + (a_2 + a_3) + (a_4 + a_5 + a_6 + a_7) + \dots$ and $t_k = (a_1) + (a_2 + a_2) + (a_4 + a_4 + a_4 + a_4) + \dots$. Notice if $n < 2^k$ then $s_n < t_k$. Consider $2s_n = 2a_1 + 2a_2 + 2(a_3 + a_4) + 2(a_5 + a_6 + a_7 + a_8) + \dots + a_n$ and $t_k = a_1 + 2a_2 + 4a_4 + 8a_8 + \dots + 2^ka_{2^k}$. Notice if $n > 2k$ then $t_k < 2s_n$.
+
+__Theorem.__ $\sum\limits_{n = 1}^\infty \frac{1}{n^p}$ converges if and only if $p > 1$.
+
+_Proof._ When $p \geq 0$, the terms don't go to $0$ so the series diverges. If $p > 0$ then $\sum 2^k\frac{1}{2^{kp}} = \sum 2^{k(1-p)}$, which is a geometric series, implying it converges if and only if $2^{1 - p} < 1$. $2^{1 - p} < 1$ if and only if $1 - p < 0$, as desired. QED.
+
+For example,
+
+(@) $\sum\limits_{n = 0}^\infty \frac{1}{n!}$ converges to $e$.
+
+    _Proof._ Its partial sums are bounded by $3$, (see $1 + 1 + \frac{1}{2} + \frac{1}{4} + \frac{1}{8} + \dots$). QED.
+
+    Its convergence is very rapid. Consider $e - s_n = \frac{1}{(n + 1)!} + \frac{1}{(n + 2)!} + \dots < \frac{1}{(n + 1)!}\underbrace{\left(1 + \frac{1}{n + 1} + \frac{1}{(n + 1)^2} + \dots\right)}_{\text{goes to } \frac{n+1}{n}}$, which goes to $\frac{1}{n!n}$.
+
+    $e$ is irrational. If $e = \frac{m}{n}$ then $0 < \underbrace{n!(e - s_n)}_{\text{integer}} < \frac{1}{n}$. There is no integer between $0$ and $\frac{1}{n}$!
